--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,20 @@
-[package]
-name = "merriam-webster-model"
+[workspace]
+members = [
+	"examples",
+	"merriam-webster-http",
+	"merriam-webster-model"
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
-description = "Type definitions for Merriam Webster's Collegiate Dictionary API"
 homepage = "https://github.com/fyko/merriam-webster"
 repository = "https://github.com/fyko/merriam-webster"
 categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
 keywords = ["merriam", "webster", "dictionary"]
 license = "MIT OR Apache-2.0"
+authors = ["Carter Himmel <carter@fyko.net>"]
 
-[dependencies]
+[workspace.dependencies]
 serde = { features = ["derive"], version = "1" }
-
-[dev-dependencies]
-anyhow = "1"
-serde_json = "1"
-serde_path_to_error = "0.1"
