--- a/merriam-webster-http/Cargo.toml
+++ b/merriam-webster-http/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "merriam-webster-http"
 description = "An HTTP client for the Merriam Webster's Dictionary API"
-version.workspace = true
+version = "0.2.0"
 edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
@@ -16,7 +16,7 @@ hyper = { default-features = false, features = ["client", "http1", "http2", "run
 hyper-rustls = { default-features = false, optional = true, features = ["http1", "http2"], version = "0.24" }
 hyper-tls = { default-features = false, optional = true, version = "0.5" }
 hyper-trust-dns = { default-features = false, optional = true, version = "0.5" }
-merriam-webster-model = { path = "../merriam-webster-model", version = "0.1.0" }
+merriam-webster-model = { path = "../merriam-webster-model", version = "0.2.0" }
 secrecy = "0.8.0"
 serde.workspace = true
 serde_json = { default-features = false, features = ["std"], version = "1" }
