--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,11 +1,24 @@
+[env]
+CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true
+
+[config]
+default_to_workspace = false
+
 [tasks.setup]
 script = '''
+    echo # installing git hooks
+    pre-commit --version || pip install pre-commit
+    pre-commit install || echo "failed to install git hooks!" 1>&2
+
+    echo # things required to install things
+    cargo install cargo-binstall
+
     echo # things required for `cargo make test`
-    cargo install cargo-nextest
+    cargo binstall -y cargo-nextest
 
     echo # things required by `cargo make coverage`
     rustup component add llvm-tools-preview
-    cargo install cargo-llvm-cov
+    cargo binstall -y cargo-llvm-cov
 '''
 
 [tasks.lint]
